--- a/index.html
+++ b/index.html
@@ -1,104 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dr. Sudarshan Gautam - Portfolio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio - Sudarshan Gautam</title>
   <style>
-    /* Reset & Base */
-    * {margin:0; padding:0; box-sizing:border-box;}
-    body {font-family: 'Segoe UI', sans-serif; line-height:1.6; background:#fdfdfd; color:#222;}
-    h2 {font-size:1.8rem; margin-bottom:1rem; color:#fff; text-align:center;}
-    h3 {font-size:1.3rem; margin:0.5rem 0; color:#333;}
-    p {font-size:1.05rem; margin:0.5rem 0;}
-    ul {margin-left:1.5rem;}
-    li {margin:0.3rem 0;}
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #f5f7fa;
+      color: #222;
+      line-height: 1.6;
+    }
+    header {
+      background: linear-gradient(90deg, #005bea, #00c6fb);
+      color: white;
+      padding: 1rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+    header h1 { margin: 0; font-size: 1.5rem; }
+    nav ul { list-style: none; margin: 0; padding: 0; display: flex; }
+    nav li { margin: 0 10px; }
+    nav a { color: white; text-decoration: none; font-weight: bold; }
 
-    /* Navbar */
-    nav {background:#222; color:#fff; display:flex; justify-content:space-between; align-items:center; padding:0.7rem 1.2rem; position:sticky; top:0; z-index:1000;}
-    nav .logo {font-weight:bold; font-size:1.2rem;}
-    nav ul {display:flex; list-style:none;}
-    nav ul li {margin-left:1.2rem;}
-    nav ul li a {color:#fff; text-decoration:none; transition:0.3s;}
-    nav ul li a:hover {color:#ffdd57;}
-    .menu-toggle {display:none; flex-direction:column; cursor:pointer;}
-    .menu-toggle span {width:25px; height:3px; background:#fff; margin:4px; border-radius:2px;}
-    @media(max-width:768px){
-      nav ul {display:none; flex-direction:column; background:#333; width:100%; position:absolute; top:60px; left:0;}
-      nav ul.show {display:flex;}
-      .menu-toggle {display:flex;}
+    /* Hamburger */
+    .menu-toggle { display: none; cursor: pointer; font-size: 1.5rem; }
+    nav ul.mobile-hidden { display: none; flex-direction: column; background: #005bea; position: absolute; top: 60px; right: 10px; border-radius: 5px; padding: 1rem; }
+    nav ul.mobile-hidden li { margin: 10px 0; }
+
+    section {
+      padding: 2rem;
+      margin: 1rem;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    section h2 { font-size: 1.4rem; color: #005bea; margin-bottom: 1rem; }
+    section h3 { color: #00a; margin-top: 1rem; }
+    ul { padding-left: 20px; }
+
+    .gallery img {
+      width: 200px; height: 150px; object-fit: cover;
+      margin: 10px; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    }
+    .lang-switch { background: white; color: #005bea; border: none; border-radius: 5px; padding: 5px 10px; cursor: pointer; font-weight: bold; }
+
+    footer {
+      background: #222; color: white; text-align: center; padding: 1rem; margin-top: 2rem;
     }
 
-    /* Sections */
-    section {padding:3rem 1.5rem;}
-    section:nth-child(even){background:#f4f4f4;}
-    section:nth-child(odd){background:#e2e8f0;}
-    section p, section li {color:#111;}
-
-    /* Gallery */
-    .gallery {display:grid; grid-template-columns:repeat(auto-fit,minmax(200px,1fr)); gap:1rem;}
-    .gallery img {width:100%; border-radius:10px; box-shadow:0 2px 6px rgba(0,0,0,0.2);}
-
-    /* Footer */
-    footer {text-align:center; padding:1rem; background:#222; color:#fff;}
-
-    /* Multilingual toggle */
-    .lang-toggle {position:fixed; bottom:20px; right:20px; background:#ff5722; color:#fff; padding:0.5rem 1rem; border:none; border-radius:5px; cursor:pointer;}
+    /* Responsive */
+    @media(max-width: 768px){
+      nav ul { display: none; }
+      .menu-toggle { display: block; }
+      nav ul.mobile-hidden { display: flex; }
+    }
   </style>
 </head>
 <body>
-
-  <!-- Navbar -->
-  <nav>
-    <div class="logo">Dr. Sudarshan Gautam</div>
-    <div class="menu-toggle" onclick="document.querySelector('nav ul').classList.toggle('show')">
-      <span></span><span></span><span></span>
+  <header>
+    <h1 id="site-title">Portfolio</h1>
+    <div>
+      <button class="lang-switch" onclick="switchLang('en')">English</button>
+      <button class="lang-switch" onclick="switchLang('sa')">संस्कृतम्</button>
+      <span class="menu-toggle" onclick="toggleMenu()">☰</span>
     </div>
-    <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#awards">Awards</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#workshops">Workshops</a></li>
-      <li><a href="#mentorship">Mentorship</a></li>
-      <li><a href="#seminars">Seminars</a></li>
-      <li><a href="#lectures">Lectures</a></li>
-      <li><a href="#shastrartha">Śāstrārtha</a></li>
-      <li><a href="#publications">Publications</a></li>
-      <li><a href="#gallery">Gallery</a></li>
-      <li><a href="#additional">Additional</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
+    <nav>
+      <ul id="menu" class="mobile-hidden">
+        <li><a href="#about">About</a></li>
+        <li><a href="#awards">Awards</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#research">Research</a></li>
+        <li><a href="#workshops">Workshops</a></li>
+        <li><a href="#mentorship">Mentorship</a></li>
+        <li><a href="#lectures">Lectures</a></li>
+        <li><a href="#seminars">Seminars</a></li>
+        <li><a href="#shastrartha">शास्त्रार्थ</a></li>
+        <li><a href="#gallery">Gallery</a></li>
+        <li><a href="#additional">Additional</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  <!-- Home -->
-  <section id="home" style="text-align:center; color:#fff; background:linear-gradient(135deg,#3f51b5,#2196f3);">
-    <img src="https://via.placeholder.com/200" alt="Profile" style="border-radius:50%; margin-bottom:1rem;">
-    <h1>Dr. Sudarshan Gautam</h1>
-    <p>Scholar | Sanskritist | Researcher in Indian Knowledge Systems</p>
-  </section>
-
-  <!-- About -->
   <section id="about">
     <h2>About Me</h2>
-    <p>I received my early education through the traditional Gurukul system, later pursuing specialized studies in <strong>Vyākaraṇa (Pāṇinian Grammar)</strong> under the classical Kashi tradition. I also underwent rigorous training in <strong>Nyāya Darśana (Indian Logic)</strong>, <strong>Mīmāṁsā Darśana (Vedic Interpretation)</strong>, <strong>Vedānta</strong>, and <strong>Śrauta Yajñas (Vedic Rituals)</strong>—both in theory and practice.</p>
-
+    <p id="intro-text">Early education was completed through the traditional Gurukul system, followed by specialised studies in Vyākaraṇa (Paninian Grammar) under the classical Kashi tradition. Comprehensive training in Nyāya (Indian Logic), Mīmāṁsā (Vedic Interpretation), Vedānta, and Vedic Śrauta Yajñas (Rituals), both in theoretical and practical applications.</p>
     <h3>Interests</h3>
     <ul>
-      <li>Indian Knowledge Traditions</li>
-      <li>Sanskrit Computational Linguistics</li>
-      <li>Śāstrārtha (Philosophical Debates)</li>
-      <li>Interdisciplinary Research in Vyākaraṇa and AI</li>
+      <li>Paninian Grammar & Semantic Studies</li>
+      <li>Indian Knowledge Systems</li>
+      <li>Computational Linguistics</li>
+      <li>Traditional Philosophy & Debates</li>
     </ul>
   </section>
 
-  <!-- Awards -->
   <section id="awards">
     <h2>Awards & Achievements</h2>
     <ul>
       <li>UGC NET JRF Award (2022)</li>
-      <li><strong>Gold Medals in Acharya (M.A) – Vyakarana (Sanskrit Grammar), 2021</strong>
+      <li>Gold Medals in Acharya (M.A) – Vyakarana (Sanskrit Grammar), 2021
         <ul>
           <li>Sampurnanand Sanskrit University Gold Medal</li>
           <li>Pt. Brahmadatta Dwivedi Gold Medal</li>
@@ -108,11 +113,9 @@
         </ul>
       </li>
       <li>All India Shalaka Competition Gold Medals in Mīmāṁsā (2019 & 2022)</li>
-      <li>Active participation and top positions in Śāstrārtha (Philosophical Debates) and Vākyārtha (Interpretative Discussions)</li>
     </ul>
   </section>
 
-  <!-- Skills -->
   <section id="skills">
     <h2>Skills & Expertise</h2>
     <ul>
@@ -126,117 +129,84 @@
     </ul>
   </section>
 
-  <!-- Projects -->
-  <section id="projects">
+  <section id="research">
     <h2>Research & Projects</h2>
-    <ul>
-      <li>"Kātiya-Darśapaurṇamāsīyādhvaryava-Prayogaḥ" – Internship under Indian Knowledge System, Government of India (2022)</li>
-    </ul>
+    <p>"Kātiya-Darśapaurṇamāsīyādhvaryava-Prayogaḥ" – 2-month project internship under the Indian Knowledge System, Government of India (2022).</p>
   </section>
 
-  <!-- Workshops -->
   <section id="workshops">
     <h2>Workshops & Training</h2>
     <h3>National</h3>
     <ul>
-      <li>National Workshop on "Various Dimensions of Sanskrit and Computer Science" – Vedic Science Centre, BHU (2024)</li>
+      <li>National Workshop on "Various Dimensions of Sanskrit and Computer Science" – Vedic Science Centre, Banaras Hindu University, Varanasi (2024)</li>
     </ul>
     <h3>International</h3>
     <ul>
-      <li>–</li>
+      <li>—</li>
     </ul>
   </section>
 
-  <!-- Mentorship -->
   <section id="mentorship">
     <h2>Mentorship</h2>
-    <ul>
-      <li>Mentor, Summer School on "Orienting Ph.D. Scholars for Research in Sanskrit Wisdom-based Computational Linguistics" – IIIT Hyderabad (2024)</li>
-    </ul>
+    <p>Mentor, Summer School on "Orienting Ph.D. Scholars for Research in Sanskrit Wisdom-based Computational Linguistics" – International Institute of Information Technology, Hyderabad (June 2024).</p>
   </section>
 
-  <!-- Seminars -->
-  <section id="seminars">
-    <h2>Seminars & Conferences</h2>
-    <h3>National</h3>
-    <ul>
-      <li>"Pāṇinīya-Samāsa-Siddhānta-Vimarśaḥ" – All India Patanjali Seminar, BHU (2023)</li>
-    </ul>
-    <h3>International</h3>
-    <ul>
-      <li>"Śrauta-Yajñeṣu Pāṇinīyopakāraḥ" – International Seminar, Central Sanskrit University, Prayagraj (2023)</li>
-      <li>Conference on "Āyurveda, Dhanurveda, Arthaśāstra, and Śāstravākyārtha in Gurukula Education" – Sampurnanand Sanskrit University (2019)</li>
-    </ul>
-  </section>
-
-  <!-- Lectures -->
   <section id="lectures">
     <h2>Lectures</h2>
+    <h3>International</h3>
+    <ul>
+      <li>International Conference on "Āyurveda, Dhanurveda, Arthaśāstra, and Śāstravākyārtha in Gurukula Education" – Sampurnanand Sanskrit University, Varanasi (2019).</li>
+    </ul>
+  </section>
+
+  <section id="seminars">
+    <h2>Seminars / Conferences</h2>
     <h3>National</h3>
     <ul>
-      <li>–</li>
+      <li>"Pāṇinīya-Samāsa-Siddhānta-Vimarśaḥ" – All India Patanjali Seminar, Department of Vyakarana, Banaras Hindu University, Varanasi (2023).</li>
     </ul>
     <h3>International</h3>
     <ul>
-      <li>–</li>
+      <li>"Śrauta-Yajñeṣu Pāṇinīyopakāraḥ" – Three-Day International Seminar, Central Sanskrit University, Prayagraj (2023).</li>
     </ul>
   </section>
 
-  <!-- Śāstrārtha -->
   <section id="shastrartha">
-    <h2>Śāstrārtha / Vākyārtha</h2>
-    <p>Actively participated and secured top positions in multiple philosophical debates and interpretative discussions.</p>
+    <h2>शास्त्रार्थ / Vākyārtha</h2>
+    <p>Actively participated and secured top positions in multiple Shastrartha (philosophical debates) and Vakyartha (interpretative discussions).</p>
   </section>
 
-  <!-- Publications -->
-  <section id="publications">
-    <h2>Publications</h2>
-    <p>Coming soon...</p>
-  </section>
-
-  <!-- Gallery -->
-  <section id="gallery">
+  <section id="gallery" class="gallery">
     <h2>Gallery</h2>
-    <div class="gallery">
-      <img src="https://via.placeholder.com/400x250" alt="Gallery 1">
-      <img src="https://via.placeholder.com/400x250" alt="Gallery 2">
-      <img src="https://via.placeholder.com/400x250" alt="Gallery 3">
-    </div>
+    <img src="https://via.placeholder.com/200x150" alt="Gallery Image 1">
+    <img src="https://via.placeholder.com/200x150" alt="Gallery Image 2">
+    <img src="https://via.placeholder.com/200x150" alt="Gallery Image 3">
   </section>
 
-  <!-- Additional -->
   <section id="additional">
     <h2>Additional Information</h2>
-    <p>Early education was completed through the traditional Gurukul system, followed by specialised studies in Vyākaraṇa (Pāṇinian Grammar) under the classical Kashi tradition. Comprehensive training in Nyāya, Mīmāṁsa, Vedānta, and Vedic Śrauta Yajñas, both in theoretical and practical applications.</p>
-  </section>
-
-  <!-- Contact -->
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: sudarshan@example.com</p>
+    <p>Early education was completed through the traditional Gurukul system, followed by specialised studies in Vyākaraṇa (Pāṇinian Grammar) under the classical Kashi tradition. Comprehensive training in Nyāya, Mīmāṁsā, Vedānta, and Vedic Śrauta Yajñas, both in theoretical and practical applications.</p>
   </section>
 
   <footer>
-    <p>© 2025 Dr. Sudarshan Gautam</p>
+    <p>&copy; 2025 Sudarshan Gautam. All rights reserved.</p>
   </footer>
 
-  <!-- Multilingual toggle -->
-  <button class="lang-toggle" onclick="toggleLang()">संस्कृतम्</button>
-
   <script>
-    let currentLang = 'en';
-    function toggleLang(){
-      if(currentLang==='en'){
-        document.body.setAttribute('lang','sa');
-        document.querySelector('.lang-toggle').innerText='English';
-        currentLang='sa';
+    function toggleMenu(){
+      const menu = document.getElementById('menu');
+      menu.classList.toggle('mobile-hidden');
+    }
+
+    function switchLang(lang){
+      if(lang === 'sa'){
+        document.getElementById('site-title').innerText = 'पोर्टफोलियो';
+        document.getElementById('intro-text').innerText = 'प्रारम्भिकशिक्षा गुरुकुलपद्धत्याः माध्यमेन सम्पन्ना। ततः वाराणस्यां परम्परागतकाशीपद्धत्यां विशेषाध्ययनं व्याकरणे (Pāṇinian Grammar) कृतम्। न्याय (Indian Logic), मीमांसा (Vedic Interpretation), वेदान्त तथा वैदिकश्रौतयज्ञानां (Rituals) सैद्धान्तिकव्यावहारिकच प्रशिक्षणम्।';
       } else {
-        document.body.setAttribute('lang','en');
-        document.querySelector('.lang-toggle').innerText='संस्कृतम्';
-        currentLang='en';
+        document.getElementById('site-title').innerText = 'Portfolio';
+        document.getElementById('intro-text').innerText = 'Early education was completed through the traditional Gurukul system, followed by specialised studies in Vyākaraṇa (Paninian Grammar) under the classical Kashi tradition. Comprehensive training in Nyāya (Indian Logic), Mīmāṁsā (Vedic Interpretation), Vedānta, and Vedic Śrauta Yajñas (Rituals), both in theoretical and practical applications.';
       }
     }
   </script>
-
 </body>
 </html>
