--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ html { scroll-behavior: smooth; }
 body { font-family:'Roboto', sans-serif; background:#f5f7fa; color:#333; }
 
 /* Top Bar */
-#topbar { text-align:center; background:#1e3a8a; color:#fff; padding:5px; font-weight:bold; }
+#topbar { text-align:center; background:#1e3a8a; color:#fff; padding:5px; font-weight:bold; position:relative; }
 #lang-toggle { position:absolute; top:5px; right:10px; background:#ff6b6b; color:#fff; border:none; padding:5px 12px; border-radius:5px; cursor:pointer; font-weight:bold; }
 
 /* Header */
@@ -75,8 +75,11 @@ section h2 { text-align:center; font-size:2em; margin-bottom:40px; color:#1e3a8a
 /* Gallery */
 .gallery { background:#f0f0ff; padding:40px; }
 .gallery-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:20px; }
-.gallery-grid img { width:100%; border-radius:15px; box-shadow:0 6px 15px rgba(0,0,0,0.1); transition:0.3s; }
+.gallery-grid div { background:#fff; border-radius:15px; box-shadow:0 6px 15px rgba(0,0,0,0.1); padding:10px; text-align:center; }
+.gallery-grid img { width:100%; border-radius:15px; transition:0.3s; }
 .gallery-grid img:hover { transform:scale(1.05); }
+.gallery-grid h3 { margin-top:10px; color:#1e3a8a; }
+.gallery-grid p { font-size:0.9em; color:#555; }
 
 /* Publications */
 .publications { background:#fff8f8; padding:40px; }
@@ -143,13 +146,159 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
   <a href="CV.pdf" class="btn" target="_blank" data-en="Download CV" data-sa="CV डाउनलोड करें">Download CV</a>
 </header>
 
-<!-- More sections will follow here like About, Awards, Skills, etc., with data-en and data-sa attributes for multilingual support -->
+<!-- About -->
+<section id="about" class="about">
+  <img src="profile.jpg" alt="Sudarshan Gautam">
+  <div>
+    <h2 data-en="About Me" data-sa="मेरे बारे में">About Me</h2>
+    <p data-en="Hello! I am Sudarshan Gautam, a researcher specializing in Linguistics, NLP, and multilingual computational frameworks." 
+       data-sa="नमस्ते! मैं सुदर्शन गौतम, भाषाविज्ञान, एनएलपी और बहुभाषी कम्प्यूटेशनल फ्रेमवर्क में विशेषज्ञ शोधकर्ता हूँ।">
+       Hello! I am Sudarshan Gautam, a researcher specializing in Linguistics, NLP, and multilingual computational frameworks.
+    </p>
+    <p><strong data-en="Education" data-sa="शिक्षा">Education:</strong> PhD/MSc in Linguistics, University Name</p>
+    <p><strong data-en="Interest (रुचि)" data-sa="रुचि (Interest)">Interest:</strong> Paninian Grammar, Semantic Analysis, Indian Knowledge Traditions</p>
+    <p><strong data-en="Introduction" data-sa="परिचय">Introduction:</strong> Comprehensive training in Vyākaraṇa (Pāṇinian Grammar), Nyāya, Mīmāṁsā, Vedānta, and Vedic Śrauta Yajñas both in theory and practice.</p>
+  </div>
+</section>
+
+<!-- Awards & Achievements -->
+<section id="achievements" class="achievements">
+  <h2 data-en="Awards & Achievements" data-sa="पुरस्कार और उपलब्धियाँ">Awards & Achievements</h2>
+  <ul>
+    <li><strong>Gold Medals in Acharya (M.A) – Vyakarana (Sanskrit Grammar), 2021</strong>
+      <ul>
+        <li>Sampurnanand Sanskrit University Gold Medal</li>
+        <li>Pt. Brahmadatta Dwivedi Gold Medal</li>
+        <li>Shri Vimal Kumar Poddar Gold Medal</li>
+        <li>Mahamandaleshwar Pavahari Swami Balakrishna Yati Ji Maharaj Gold Medal</li>
+        <li>Mahanta Rameshwar Puri Gold Medal</li>
+      </ul>
+    </li>
+    <li>UGC NET JRF Award (2022)</li>
+    <li>All India Shalaka Competition Gold Medals in Mīmāṁsā (2019 & 2022)</li>
+    <li>Top positions in multiple Shastrartha (philosophical debates) and Vakyartha (interpretative discussions)</li>
+  </ul>
+</section>
+
+<!-- Skills -->
+<section id="skills" class="skills">
+  <h2 data-en="Skills & Expertise" data-sa="कौशल और विशेषज्ञता">Skills & Expertise</h2>
+  <ul>
+    <li>Paninian Grammar</li>
+    <li>Semantics</li>
+    <li>Syntax</li>
+    <li>Nyāya Darśana</li>
+    <li>Mīmāṁsā Darśana</li>
+    <li>Śrauta Yajña</li>
+    <li>Indian Knowledge Tradition</li>
+  </ul>
+</section>
+
+<!-- Workshops -->
+<section id="workshops" class="workshops">
+  <h2 data-en="Workshops & Training" data-sa="कार्यशालाएँ">Workshops & Training</h2>
+  <div class="tabs">
+    <button class="tablinks" onclick="openTab(event,'WorkshopInternational')">International</button>
+    <button class="tablinks" onclick="openTab(event,'WorkshopNational')">National</button>
+  </div>
+  <div id="WorkshopInternational" class="tabcontent">
+    <ul>
+      <li>International Workshop Example 1 – 2023</li>
+      <li>International Workshop Example 2 – 2024</li>
+    </ul>
+  </div>
+  <div id="WorkshopNational" class="tabcontent">
+    <ul>
+      <li>National Workshop on "Various Dimensions of Sanskrit and Computer Science" – BHU, Varanasi (2024)</li>
+      <li>National Workshop Example 2 – 2023</li>
+    </ul>
+  </div>
+</section>
+
+<!-- Seminars & Conferences -->
+<section id="seminars" class="seminars">
+  <h2 data-en="Seminars/Conferences" data-sa="सम्मेलन/संगोष्ठियाँ">Seminars/Conferences</h2>
+  <div class="tabs">
+    <button class="tablinks" onclick="openTab(event,'SeminarInternational')">International</button>
+    <button class="tablinks" onclick="openTab(event,'SeminarNational')">National</button>
+  </div>
+  <div id="SeminarInternational" class="tabcontent">
+    <ul>
+      <li>"Śrauta-Yajñeṣu Pāṇinīyopakāraḥ" – Central Sanskrit University, Prayagraj (2023)</li>
+    </ul>
+  </div>
+  <div id="SeminarNational" class="tabcontent">
+    <ul>
+      <li>"Pāṇinīya-Samāsa-Siddhānta-Vimarśaḥ" – All India Patanjali Seminar, BHU, Varanasi (2023)</li>
+    </ul>
+  </div>
+</section>
+
+<!-- Lectures -->
+<section id="lectures" class="lectures">
+  <h2 data-en="Lectures" data-sa="व्याख्यान">Lectures</h2>
+  <ul>
+    <li>International Conference on "Āyurveda, Dhanurveda, Arthaśāstra, and Śāstravākyārtha in Gurukula Education" – Sampurnanand Sanskrit University, Varanasi (2019)</li>
+  </ul>
+</section>
+
+<!-- Publications -->
+<section id="publications" class="publications">
+  <h2 data-en="Publications" data-sa="प्रकाशन">Publications</h2>
+  <ul>
+    <li>"Compounding in Universal Semantic Representation" – <em>Journal of Linguistics</em>, 2024 
+      <a href="https://example.com/publication1" target="_blank">[Link]</a></li>
+    <li>"Paninian Grammar for NLP" – <em>International Conference on Sanskrit Computing</em>, 2023 
+      <a href="https://example.com/publication2" target="_blank">[Link]</a></li>
+    <li>"Semantic Analysis of Tatpuruṣa Compounds" – <em>Indian Linguistics Journal</em>, 2022 
+      <a href="https://example.com/publication3" target="_blank">[Link]</a></li>
+  </ul>
+</section>
+
+<!-- Gallery -->
+<section id="gallery" class="gallery">
+  <h2 data-en="Gallery" data-sa="गैलरी">Gallery</h2>
+  <div class="gallery-grid">
+    <div>
+      <img src="gallery1.jpg" alt="Gallery 1">
+      <h3>Workshop on Paninian Grammar</h3>
+      <p>Interactive session with students and scholars</p>
+    </div>
+    <div>
+      <img src="gallery2.jpg" alt="Gallery 2">
+      <h3>Conference on NLP & Sanskrit</h3>
+      <p>Presentation of research papers</p>
+    </div>
+    <div>
+      <img src="gallery3.jpg" alt="Gallery 3">
+      <h3>Traditional Yajña Ceremony</h3>
+      <p>Participation in Vedic ritual</p>
+    </div>
+  </div>
+</section>
+
+<!-- Additional Info -->
+<section id="additional" class="additional">
+  <h2 data-en="Additional Info" data-sa="अतिरिक्त जानकारी">Additional Info</h2>
+  <p>Fluent in Sanskrit, Hindi, English, and Nepali. Experienced in research, teaching, workshops, and conferences.</p>
+</section>
+
+<!-- Contact -->
+<section id="contact" class="contact">
+  <h2 data-en="Contact" data-sa="संपर्क करें">Contact</h2>
+  <a href="mailto:sudarshan@example.com" data-en="Email" data-sa="ईमेल">Email</a>
+  <a href="tel:+919876543210" data-en="Phone" data-sa="फोन">Phone</a>
+  <a href="https://linkedin.com/in/sudarshangautam" target="_blank" data-en="LinkedIn" data-sa="लिंक्डइन">LinkedIn</a>
+</section>
+
+<!-- Footer -->
+<footer>
+  &copy; 2025 Sudarshan Gautam. All Rights Reserved.
+</footer>
 
 <script>
 // Hamburger toggle
-function toggleMenu() {
-  document.getElementById("navLinks").classList.toggle("show");
-}
+function toggleMenu() { document.getElementById("navLinks").classList.toggle("show"); }
 
 // Tabs
 function openTab(evt, tabName) {
@@ -167,9 +316,7 @@ const sections = document.querySelectorAll("section");
 window.addEventListener("scroll", function(){
   sections.forEach(section=>{
     const rect = section.getBoundingClientRect();
-    if(rect.top < window.innerHeight - 100){
-      section.classList.add("show");
-    }
+    if(rect.top < window.innerHeight - 100){ section.classList.add("show"); }
   });
 });
 
@@ -189,9 +336,7 @@ updateDateTime();
 let currentLang = 'en';
 function toggleLanguage(){
   currentLang = currentLang === 'en' ? 'sa' : 'en';
-  document.querySelectorAll('[data-en]').forEach(el=>{
-    el.innerText = el.getAttribute(`data-${currentLang}`);
-  });
+  document.querySelectorAll('[data-en]').forEach(el=>{ el.innerText = el.getAttribute(`data-${currentLang}`); });
 }
 </script>
 
